# CopperPilot

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  celery_app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  start_server.sh  stop_server.sh
ai_agents/: __init__.py  agent_manager.py
data/: component_ratings.json
docs/: AI_MODEL_CONFIGURATION.md  ARCHITECTURE.md  BOM_CONVERTER.md  CHANGELOG.md  DUAL_SUPPLIER_BOM_SYSTEM.md  EAGLE_CONVERTER.md  EASYEDA_PRO_CONVERTER.md  GITHUB_RELEASE_STEPS.md  KICAD_CONVERTER.md  PROJECT_OVERVIEW.md  README.md  SCHEMATICS_CONVERTER.md  SPICE_CONVERTER.md  TESTING_GUIDE.md
frontend/: CHAT_OPTIONS.md  circuit_capacitor_bottom.json  index.html
scripts/: bom_converter.py  eagle_converter.py  easyeda_converter_pro.py  forensic_validation.py  kicad_converter.py  schematics_converter.py  schematics_text_converter.py  spice_converter.py  test_validation_generic.py
server/: __init__.py  config.py  main.py  main_production.py  main_simple.py
tests/: README.md  TESTING_STRATEGY.md  analyze_lowlevel_circuits.py  conftest.py  production_signoff.py  reconstruct_and_integrate.py  run_all_converter_tests.py  simulate_eagle_conversion.py  simulate_easyeda_pro_conversion.py  simulate_integration_fix.py  simulate_kicad_conversion.py  simulate_kicad_single.py  simulate_schematics_conversion.py  simulate_schematics_desc_conversion.py  simulate_step3_from_ai_output.py  simulate_step3_multi_agent.py  simulate_step3_two_stage.py  test_bom_converter.py  test_eagle_converter.py  (+20 more)
(+196 files in other folders)
